Aplicación completagit add .!

--- a/app/views/templates/stock-table.html
+++ b/app/views/templates/stock-table.html
@@ -28,7 +28,7 @@
 			<td>{{watchlist.shares}}</td>
 			<td></td>
 			<td></td>
-			<td>{{watchlist.marketValue | currency}}</td>
+			<td stk-sign-fade="{{ watchlist.marketValue }}">{{watchlist.marketValue | currency}}</td>
 			<td stk-sign-color="{{watchlist.dayChange}}">
 				{{watchlist.dayChange | currency}}
 			</td>
@@ -39,10 +39,10 @@
 		<tr stk-stock-row ng-repeat="stock in watchlist.stocks track by $index" stock="stock" is-last="$last">
 			<td>{{stock.company.symbol}}</td>
 			<td contenteditable type="number" ng-model="stock.shares"></td>
-			<td>{{stock.lastPrice | currency}}</td>
+			<td stk-sign-fade="{{ stock.lastPrice }}">{{stock.lastPrice | currency}}</td>
 			<td>
-				<span ng-hide="showPercent">{{stock.change | currency}}</span>
-				<span ng-show="showPercent">{{stock.percentChange}}</span>
+				<span stk-sign-color="{{stock.change}}" ng-hide="showPercent">{{stock.change | currency}}</span>
+				<span stk-sign-color="{{stock.percentChange}}" ng-show="showPercent">{{stock.percentChange}}</span>
 			</td>
 			<td>{{stock.marketValue | currency}}</td>
 			<td stk-sign-color="{{stock.dayChange}}">
